# HELM-CRT

./: .gitignore  .helm_profile.json  LICENSE  README.md  pyproject.toml
experiments/: dev_pipeline.py  paper_bench.py  profile_pipeline.py  run_paper_experiments.sh
experiments/results/: avx_ablation_result.json  kv_off_8b_result.json  rtx_3090_helm_14b_ablations.json  rtx_3090_helm_32b_ablations.json  thread_bench_8b_result.json
experiments/results/20260316_160248/: SUMMARY.md  hardware.json  progress.jsonl
helm/: __init__.py  cli.py
helm/compiler/: compiler.py
helm/compiler/IR/: graph.py
helm/compiler/analysis/: hardware.py  hybrid_analyzer.py
helm/compiler/importers/: attention_adapters.py  attention_capture.py  decode_tracer.py  fx_importer.py  patch_fx.py
helm/compiler/lowering/: stage_fx_builder.py
helm/compiler/optimization/: cost_model.py  device_profiler.py  strategy_selector.py
helm/compiler/partition/: parition_plan.py  partition_units.py
helm/compiler/scheduling/: scheduler.py
helm/kernels/: __init__.py  fp16_gemv.cpp
helm/runtime/: executor.py  kv_allocator.py  kv_cache.py  kv_offload.py  pipeline_runtime.py  stage.py  tensor_transfer.py
tests/: conftest.py
tests/integration/: test_compiler_pipeline.py  test_runtime_pipeline.py
tests/unit/compiler/: test_cost_model.py  test_fx_importer.py  test_ir_graph.py  test_partition_units.py  test_strategy_selector.py
tests/unit/runtime/: test_batch_kv_offload.py  test_kv_allocator.py  test_kv_cache.py  test_streaming_attention.py  test_tensor_transfer.py
(+7 files in other folders)
